--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : XooX
 tagline: Site Tagline
+
 author :
   name : iwrose
   email : iwrose@126.com
