--- a/_config.yml
+++ b/_config.yml
@@ -78,9 +78,9 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : livefyre
+    provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : justforfuture
     livefyre :
       site_id : 316121
     intensedebate :
