--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ pygments: true
 title : XooX
 tagline: Site Tagline
 
-author :
-  name : iwrose
+author : iwrose
+  name : 易金金
   email : iwrose@126.com
   github : iwrose
   
