--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : XooX
+title : 
 tagline: Site Tagline
-
-author : iwrose
-  name : 易金金
+author : 
+  name : 易 金金
   email : iwrose@126.com
   github : iwrose
+  twitter : 
+  feedburner : 
   
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
