--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ pygments: true
 #
 title : 
 tagline: Site Tagline
-author : 
-  name : 易 金金
-  email : iwrose@126.com
-  github : iwrose
-  twitter : 
-  feedburner : 
+author : iwrose
+name : 易 金金
+email : iwrose@126.com
+github : iwrose
+twitter : 
+feedburner : 
   
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
